--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 
   <header>
-    <h1>Your Name</h1>
+    <h1>Karthikeyan</h1>
     <nav>
       <a href="#hero">Home</a>
       <a href="#about">About</a>
@@ -17,19 +17,28 @@
       <a href="#skills">Skills</a>
       <a href="#experience">Experience</a>
       <a href="#contact">Contact</a>
+      <a href="https://linkedin.com/in/your-profile" target="_blank">LinkedIn</a>
     </nav>
   </header>
 
   <section class="hero" id="hero">
     <canvas id="cubeCanvas"></canvas>
-    <h2>Hi, I'm [Your Name]</h2>
+    <h2>Hi, I'm Karthikeyan</h2>
     <p>Software Developer & Data Engineer</p>
   </section>
 
   <section id="about">
-    <div class="content">
-      <h2>About Me</h2>
-      <p>[Brief description about yourself]</p>
+    <div class="content about-container">
+      <img src="your-image.jpg" alt="Karthikeyan Krishnan" class="profile-img">
+      <div>
+        <h2>About Me</h2>
+        <p>
+          I'm Karthikeyan Krishnan, a final-year Computer Science Engineering student with a passion for software development and data engineering. I enjoy building real-world applications using Python, Flask, and JavaScript.
+        </p>
+        <p>
+          I’ve worked on projects like a skin disease detection system, a flood monitoring and alerting system, and web apps using Flask. I love turning ideas into clean, functional, and engaging digital experiences.
+        </p>
+      </div>
     </div>
   </section>
 
@@ -79,6 +88,11 @@
       </form>
     </div>
   </section>
+
+  <footer>
+    <p>© 2025 Karthikeyan Krishnan</p>
+    <a href="https://linkedin.com/in/your-profile" target="_blank">Connect on LinkedIn</a>
+  </footer>
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
   <script src="main.js"></script>
