--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
   <section id="about">
     <div class="content about-container">
-      <img src="your-image.jpg" alt="Karthikeyan Krishnan" class="profile-img">
+      <img src="karthi_img.jpg" alt="Karthikeyan Krishnan" class="profile-img">
       <div>
         <h2>About Me</h2>
         <p>
