--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Karthikeyan's Portfolio</title>
+  <title>Karthikeyan Krishnan - Portfolio</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
@@ -17,26 +17,29 @@
       <a href="#skills">Skills</a>
       <a href="#experience">Experience</a>
       <a href="#contact">Contact</a>
-      <a href="https://linkedin.com/in/your-profile" target="_blank">LinkedIn</a>
+      <a href="https://linkedin.com/in/your-linkedin-profile" target="_blank">LinkedIn</a>
     </nav>
   </header>
 
   <section class="hero" id="hero">
     <canvas id="cubeCanvas"></canvas>
-    <h2>Hi, I'm Karthikeyan</h2>
-    <p>Software Developer & Data Engineer</p>
+    <h2>Hi, I'm Karthikeyan Krishnan</h2>
+    <p>Software Developer & Aspiring Data Engineer</p>
   </section>
 
   <section id="about">
     <div class="content about-container">
-      <img src="Karthi_img.jpg" alt="Karthikeyan Krishnan" class="profile-img">
+      <img src="your-image.jpg" alt="Karthikeyan Krishnan" class="profile-img">
       <div>
         <h2>About Me</h2>
         <p>
-          I'm Karthikeyan Krishnan, a final-year Computer Science Engineering student with a passion for software development and data engineering. I enjoy building real-world applications using Python, Flask, and JavaScript.
+          I'm a final-year Computer Science Engineering student with an Honors degree in Data Science. I’m passionate about developing efficient web apps, managing data pipelines, and crafting scalable solutions.
         </p>
         <p>
-          I’ve worked on projects like a skin disease detection system, a flood monitoring and alerting system, and web apps using Flask. I love turning ideas into clean, functional, and engaging digital experiences.
+          I’ve interned as a Python Developer at Techfidelite and as a Web Developer at BluelinesTech. I enjoy working with technologies like Flask, MongoDB, and Django, and I’m currently exploring 3D design with Three.js.
+        </p>
+        <p>
+          Outside of tech, I love playing cricket and continuously learning new skills to push boundaries as a developer.
         </p>
       </div>
     </div>
@@ -46,9 +49,10 @@
     <div class="content">
       <h2>Projects</h2>
       <div class="projects">
-        <div class="card">Skin Disease Detection</div>
-        <div class="card">Flood Monitoring System</div>
-        <div class="card">CRUD App in Flask</div>
+        <div class="card">Skin Disease Detection using AI</div>
+        <div class="card">Flood Monitoring and Alerting System</div>
+        <div class="card">Flask CRUD Application with Authentication</div>
+        <div class="card">Dynamic 3D Portfolio Website</div>
       </div>
     </div>
   </section>
@@ -63,6 +67,9 @@
         <div class="card">Django</div>
         <div class="card">HTML/CSS</div>
         <div class="card">JavaScript</div>
+        <div class="card">SQL</div>
+        <div class="card">Data Science</div>
+        <div class="card">Three.js</div>
       </div>
     </div>
   </section>
@@ -71,8 +78,16 @@
     <div class="content">
       <h2>Experience</h2>
       <div class="experience">
-        <div class="card">Python Intern @ Techfidelite</div>
-        <div class="card">Web Developer Intern @ BluelinesTech</div>
+        <div class="card">
+          <strong>Python Developer Intern</strong><br>
+          Techfidelite<br>
+          Developed backend features using Python and Flask, and collaborated on automation tools.
+        </div>
+        <div class="card">
+          <strong>Web Developer Intern</strong><br>
+          BluelinesTech Solutions<br>
+          Built responsive websites and forms, optimized UI using HTML, CSS, JavaScript.
+        </div>
       </div>
     </div>
   </section>
@@ -91,7 +106,7 @@
 
   <footer>
     <p>© 2025 Karthikeyan Krishnan</p>
-    <a href="https://linkedin.com/in/your-profile" target="_blank">Connect on LinkedIn</a>
+    <a href="https://linkedin.com/in/your-linkedin-profile" target="_blank">Connect on LinkedIn</a>
   </footer>
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
