--- a/index.html
+++ b/index.html
@@ -10,17 +10,21 @@
 
   <header>
     <h1>Karthikeyan Krishnan</h1>
-    <nav>
-      <a href="#hero">Home</a>
-      <a href="#about">About</a>
-      <a href="#projects">Projects</a>
-      <a href="#skills">Skills</a>
-      <a href="#experience">Experience</a>
-      <a href="#contact">Contact</a>
-      <a href="https:www.linkedin.com/in/karthikeyankrishnan08-
+<header>
+  <h1>Karthikeyan</h1>
+  <nav class="navbar">
+    <ul class="nav-list">
+      <li><a href="#hero">Home</a></li>
+      <li><a href="#about">About</a></li>
+      <li><a href="#projects">Projects</a></li>
+      <li><a href="#skills">Skills</a></li>
+      <li><a href="#experience">Experience</a></li>
+      <li><a href="#contact">Contact</a></li>
+     
+    </ul>
+  </nav>
+</header>
 
-" target="_blank">LinkedIn</a>
-    </nav>
   </header>
 
   <section class="hero" id="hero">
