--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
     <section id="about">
       <div class="content about-container">
-        <img src="your-image.jpg" alt="Karthikeyan Krishnan" class="profile-img">
+        <img src="Karthi_img.jpg" alt="Karthikeyan Krishnan" class="profile-img">
         <div>
           <h2>About Me</h2>
           <p>I am a final-year Computer Science Engineering student with a strong interest in software development and data engineering. I enjoy working on real-world projects using technologies like Python, Flask, and MongoDB.</p>
