--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 
   <footer>
     <p>&copy; 2025 Karthikeyan Krishnan</p>
-    <a href="https://linkedin.com/in/your-profile" target="_blank">Connect on LinkedIn</a>
+    <a href="https://www.linkedin.com/in/karthikeyankrishnan08-/" target="_blank">Connect on LinkedIn</a>
   </footer>
 </body>
 </html>
