--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <header>
-    <h1>Karthikeyan</h1>
+    <h1>Karthikeyan Krishnan</h1>
     <nav class="navbar">
       <ul class="nav-list">
         <li><a href="#hero">Home</a></li>
