--- a/index.html
+++ b/index.html
@@ -38,16 +38,29 @@
     </section>
 
     <section id="projects">
-      <div class="content">
-        <h2>Projects</h2>
-        <div class="projects">
-          <div class="card">Skin Disease Detection using AI</div>
-          <div class="card">Flood Monitoring and Alerting System</div>
-          <div class="card">Flask CRUD Application</div>
-          <div class="card">3D Portfolio Website</div>
-        </div>
+  <div class="content">
+    <h2>Projects</h2>
+    <div class="projects">
+      <div class="card">
+        <h3>Skin Disease Detection using AI</h3>
+        <p>Developed a deep learning model to identify various skin conditions using image classification techniques. Implemented using Python and TensorFlow.</p>
       </div>
-    </section>
+      <div class="card">
+        <h3>Flood Monitoring and Alerting System</h3>
+        <p>Designed an IoT-based system to monitor water levels and send alerts using sensors and a web dashboard. Built with NodeMCU, sensors, and Firebase.</p>
+      </div>
+      <div class="card">
+        <h3>Flask CRUD Application</h3>
+        <p>Created a web application with full CRUD functionality using Flask and MongoDB. Features include authentication, form validation, and responsive UI.</p>
+      </div>
+      <div class="card">
+        <h3>3D Portfolio Website</h3>
+        <p>Designed a dynamic portfolio using HTML, CSS, JavaScript, and Three.js to showcase interactive 3D animations and personal projects.</p>
+      </div>
+    </div>
+  </div>
+</section>
+
 
     <section id="skills">
       <div class="content">
