--- a/index.html
+++ b/index.html
@@ -37,29 +37,26 @@
       </div>
     </section>
 
-    <section id="projects">
+ <section id="projects">
   <div class="content">
     <h2>Projects</h2>
     <div class="projects">
-      <div class="card">
-        <h3>Skin Disease Detection using AI</h3>
-        <p>Developed a deep learning model to identify various skin conditions using image classification techniques. Implemented using Python and TensorFlow.</p>
-      </div>
+
       <div class="card">
         <h3>Flood Monitoring and Alerting System</h3>
         <p>Designed an IoT-based system to monitor water levels and send alerts using sensors and a web dashboard. Built with NodeMCU, sensors, and Firebase.</p>
+        <a href="https://github.com/Karthikeyank0903/Flood-Monitoring-And-Alert-System" target="_blank">View on GitHub</a>
       </div>
-      <div class="card">
-        <h3>Flask CRUD Application</h3>
-        <p>Created a web application with full CRUD functionality using Flask and MongoDB. Features include authentication, form validation, and responsive UI.</p>
-      </div>
+
       <div class="card">
         <h3>3D Portfolio Website</h3>
         <p>Designed a dynamic portfolio using HTML, CSS, JavaScript, and Three.js to showcase interactive 3D animations and personal projects.</p>
+        <a href="https://github.com/Karthikeyank0903/my--portfolio" target="_blank">View on GitHub</a>
       </div>
     </div>
   </div>
 </section>
+
 
 
     <section id="skills">
