--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   <main>
     <section id="hero" class="hero">
       <h2>Hi, I'm Karthikeyan Krishnan</h2>
-      <p>Software Developer & Aspiring Data Engineer</p>
+      <p>Aspiring Software Developer & Data Engineer</p>
     </section>
 
     <section id="about">
